@@ -1791,10 +1791,10 @@ public class Display2D extends JComponent implements Steppable, Manipulating2D
     public final static int UPDATE_RULE_WALLCLOCK_TIME = 2;
     public final static int UPDATE_RULE_ALWAYS = 3;
     public final static int UPDATE_RULE_NEVER = 4;
-    int updateRule = UPDATE_RULE_ALWAYS;
-    long stepInterval = 1;
-    double timeInterval = 0;
-    long wallInterval = 0;
+    protected int updateRule = UPDATE_RULE_ALWAYS;
+    protected long stepInterval = 1;
+    protected double timeInterval = 0;
+    protected long wallInterval = 0;
     long lastStep = -1;
     double lastTime = Schedule.BEFORE_SIMULATION;
     long lastWall = -1;  // the current time is around 1266514720569 so this should be fine (knock on wood)
@@ -1873,7 +1873,7 @@ public class Display2D extends JComponent implements Steppable, Manipulating2D
         return false;
         }
 
-    void rebuildSkipFrame()
+    protected void rebuildSkipFrame()
         {
         skipFrame.getContentPane().removeAll();
         skipFrame.getContentPane().invalidate();
@@ -1972,7 +1972,7 @@ public class Display2D extends JComponent implements Steppable, Manipulating2D
         skipListener.actionPerformed(null);  // have it update the text field accordingly
         }
 
-    void rebuildRefreshPopup()
+    protected void rebuildRefreshPopup()
         {
         refreshPopup.removeAll();
         String s = "";
